--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -19,6 +19,14 @@
   width: 15rem;
   padding: 0.35rem;
 }
+.error label {
+  color: rgb(136, 2, 2);
+}
+.error input {
+  border-color: rgb(136, 2, 2);
+  color: rgb(136, 2, 2);
+  background-color: rgb(253, 219, 219);
+}
 
 #game-configuration {
   width: 90%;
@@ -41,8 +49,8 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 #game-configuration h2 {
-    font-size: 1rem;
-    margin: 0.5rem 0;
+  font-size: 1rem;
+  margin: 0.5rem 0;
 }
 #game-configuration h3 {
   font-size: 1.5rem;
@@ -51,8 +59,8 @@
 }
 
 .player-symbol {
-    font-size: 2rem;
-    font-weight: bold;
-    color: rgb(47, 4, 82);
-    margin: 0.5rem 0;
+  font-size: 2rem;
+  font-weight: bold;
+  color: rgb(47, 4, 82);
+  margin: 0.5rem 0;
 }
